# pollyweb-pypi

./: .coverage  .gitignore  .secrets.baseline  AGENTS-user.md  AGENTS.md  CLAUDE.md  CLIENT_INSTRUCTIONS.md  CONTRIBUTING.md  LICENSE  NLWEB.py  README.md  RELEASES.md  check.priv.pem  check.pub.pem  conftest.py  openssl.priv.pem  openssl_priv.pem  openssl_pub.pem  pyproject.toml  setup.cfg  setup.py  test.priv.pem  test.pub.pem  test1.priv  test1.pub  test2.priv.pem  test2.pub.openssl.pem
.backlog/: SKILL.me
.githooks/: pre-push
.github/workflows/: publish.yml
docs/: README.md  dns.md  domain.md  keypair.md  llm-token-efficiency.md  manifest.md  msg.md  prompt.md  schema.md  struct.md  token.md  wallet.md
docs/dns/: check.md
docs/domain/: dns.md  send.md  sign.md
docs/keypair/: dkim.md  private_pem_bytes.md  public_pem_bytes.md
docs/manifest/: from_dict.md  load.md  parse.md  to_dict.md
docs/msg/: canonical.md  from_dict.md  from_outbound.md  load.md  parse.md  send.md  sign.md  to_dict.md  validate.md  validate_unsigned.md  verify.md  verify_details.md
pollyweb/: __init__.py  _crypto.py  _transport.py  dns.py  domain.py  envelope.py  keypair.py  manifest.py  msg.py  prompt.py  schema.py  struct.py  token.py  wallet.py
pollyweb/aws/: ACM.py  ACM_CERTIFICATE.py  ACM_TESTS.py  APIGW.py  APIGW_DOMAIN.py  APIGW_RESTAPI.py  APIGW_RESTAPI_METHOD.py  APIGW_RESTAPI_RESOURCE.py  APIGW_RESTAPI_STAGE.py  APIGW_TESTS.py  APPCONFIG_APP.py  APPCONFIG_APP_CONFIG.py  APPCONFIG_APP_DEPLOY.py  APPCONFIG_APP_ENV.py  APPCONFIG_APP_STRATEGY.py  APPCONFIG_APP_VERSION.py  APPCONFIG_MOCK.py  APPCONFIG_MOCK_TESTS.py  APPCONFIG_REAL.py  APPCONFIG_REAL_DEPLOY.py  APPCONFIG_REAL_TESTS.py  APPRUNNER.py  APPRUNNER_SERVICE.py  APPSYNC_CLIENT.py  APPSYNC_RESOLVER.py  AWS.py  AWS_MOCKS.py  AWS_MOCKS_TESTS.py  AWS_REAL_TESTS.py  AWS_RESOURCE_ITEM.py  AWS_RESOURCE_POOL.py  AWS_RESOURCE_TESTER.py  AWS_RETRY.py  AWS_RETRY_TESTS.py  AWS_TEST.py  CDK.py  CLOUDFRONT.py  CLOUDFRONT_DISTRIBUTION.py  CODEBUILD.py  CODEBUILD_BUILD.py  (+114 more)
pollyweb/demo/: emulate.py  grab.py  keys.py  listen.py  setup.py
pollyweb/interfaces/: CHARGE.py  CODE.py  CODE_TESTS.py  ITEM.py  MANIFEST.py  MANIFEST_TRUST.py  MSG.py  MSG_RECEIVER.py  PROMPT.py  PROMPT_OPTION.py  PROMPT_REPLY.py  PROMPT_SESSION.py  PROMPT_TESTS.py  QR.py  QR_TESTS.py  QUERY.py  SESSION.py  TOKEN.py
pollyweb/parallel/: PARALLEL.py  PARALLEL_DISPLAY.py  PARALLEL_DISPLAY_SLOT.py  PARALLEL_LOG_TESTS.py  PARALLEL_PROCESS.py  PARALLEL_PROCESSES.py  PARALLEL_PROCESS_POOL.py  PARALLEL_PROCESS_TESTS.py  PARALLEL_PROCESS_TESTS_A.py  (+32 more)
scripts/: deploy.py  pre-push
tasks/: lessons.md  todo.md
test-blog/: priv.key  priv.pem  pub.key  pub.pem
tests/: test_demo_emulate.py  test_demo_grab.py  test_demo_keys.py  test_demo_setup.py  test_dns.py  test_domain.py  test_envelope.py  test_import.py  test_legacy_classmethod_suites.py  test_manifest.py  test_msg.py  test_namespace.py  test_prompt.py  test_struct.py  test_token.py  test_version.py  test_wallet.py
tools/: audit-llm-context.sh  run-security-scans.sh
(+30 files in other folders)
