[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pollyweb"
version = "1.0.0"
description = "A neutral, open, and global web protocol that allows any person or AI agent to chat with any business, place, or thing."
authors = [ { name = "jorgemf", email = "pollyweb@pollycore.net" } ]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "cryptography>=41.0.0",
    "PyYAML>=6.0",
    "dnspython>=2.0"
]

[project.urls]
"Website" = "https://www.pollyweb.org"
"Documentation" = "https://docs.pollyweb.org"

[tool.setuptools.packages.find]
include = ["pollyweb*"]

[tool.pytest.ini_options]
testpaths = ["tests", "pollyweb"]
