[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pollyweb"
dynamic = ["version"]
description = "A neutral, open, and global web protocol that allows any person or AI agent to chat with any business, place, or thing."
authors = [ { name = "jorgemf", email = "pollyweb@pollycore.net" } ]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.7"

dependencies = [
    "cryptography>=41.0.0",
    "PyYAML>=6.0",
    "dnspython>=2.0"
]

[project.urls]
"Website" = "https://www.pollyweb.org"
"Documentation" = "https://github.com/pollyweb-org/pollyweb-pypi/tree/main/docs"

[tool.setuptools.packages.find]
include = ["pollyweb*"]

[tool.pytest.ini_options]
testpaths = ["tests", "pollyweb"]
markers = [
    "live_dns: tests that perform real DNS lookups and require network access",
]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
